[tool.poetry]
name = "loem-notes"
version = "0.1.0"
description = ""
authors = ["loem-ms <mengsaylms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numpy = "^1.17.0"
ipykernel = "^6.29.4"
scikit-learn = "^1.5.0"
ipywidgets = "^8.1.3"
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
ghp-import = "^2.1.0"
diffusers = "^0.29.2"
transformers = "^4.42.3"
accelerate = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
